--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,6 +1,6 @@
 body,html{
     height: 100%;
-    min-width: 370px;
+    min-width: 350px;
 }
 img{
     width: 100%;
@@ -102,8 +102,7 @@ th{
 }
 @media(max-width:762px){
   section{
-    padding-left: 10px!important;
-    padding-right: 0px!important;
+    padding:0 15px;
   }
   .service-form,.title {
     transform: translate(0, 0px)!important;
