--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -41,15 +41,31 @@ form input{
   border-radius: 1px;
 }
 .btn-vtp{
-  background: #80BD00;
+  background-color: #80BD00;
   box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.08), inset -2px -2px 4px #699B00, inset 4px 4px 9px #ADFF00;
   border-radius: 2px;
   border: none;
   color: #FFFFFF;
   font-style: normal;
   font-weight: bold;
+  position: relative;
+  background-image: linear-gradient(45deg, rgba(255,255,255,.0) 40%, rgba(255,255,255,.5), rgba(255,255,255,.0) 60%);
+  background-repeat: no-repeat;
+  background-size: 200% 100%, auto;
+  background-position: 200% 0, 0 0;
+  display: inline-block;
+  width: auto;
+  overflow: hidden;
+  animation: blik 3s linear infinite alternate-reverse;
 }
-
+@keyframes blik{
+  0%{
+    background-position: -200% 0, 0 0;
+  }
+  100%{
+    background-position: 200% 0, 0 0;
+  }
+}
 ul{
   list-style: none;
   padding: 0!important;
